[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
#tower-http = { workspace = true, features = ["cors"] }
apalis = { version = "0.7.0", features = [
    "tracing",
    "catch-panic",
    "retry",
    "limit",
    "prometheus",
] }
chrono.workspace = true
apalis-cron = "0.7.0"
chaindata-service = { path = "../chaindata/service" }
axum = { workspace = true, features = [
    "ws",
    "macros",
] } # We need to add websocket support
confique = { workspace = true, features = ["toml"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.14"
tracing.workspace = true
tracing-subscriber.workspace = true
metrics-exporter-prometheus = { version = "0.16.2", default-features = false, features = ["http-listener"] }
apalis-core = "0.7.0"
tower = "0.5.2"
anyhow.workspace = true
ekubo = { path = "../ekubo" }
url = { workspace = true, features = ["serde"] }
starknet.workspace = true
arc-swap = "1.7.1"
metrics = "0.24.1"
pin-project-lite = "0.2.16"
tower-http = { workspace = true, features = ["cors"] }
http = { workspace = true }
sqlx = { workspace = true, features = [
    "derive",
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
dotenv = "0.15.0"
migrations = { path = "../migrations" }
chaindata-repository = { path = "../chaindata/repository" }
ponziland-models = { path = "../ponziland-models" }
serde_json.workspace = true
price-provider.workspace = true
avnu-pricing = { path = "../avnu-pricing" }
moka = { version = "0.12", features = ["future"] }

[lints]
workspace = true
