[package]
name = "torii-ingester"
version = "0.1.0"
edition = "2021"

[[example]]
name = "test"

[dependencies]
tracing.workspace = true
starknet = { workspace = true }
tokio.workspace = true
tokio-stream = "0.1"

reqwest = { workspace = true, features = ["json"] }
thiserror.workspace = true

serde = { workspace = true, features = ["derive"] }

torii-client.workspace = true
torii-grpc-client.workspace = true
dojo-world.workspace = true
dojo-types.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
crypto-bigint = "0.5.5"
async-stream = "0.3.6"
chrono = { version = "0.4.41", features = ["serde"] }
serde-aux = "4.7.0"

[lints]
workspace = true
